<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="103dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:autoText="false"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated,TextSizeCheck,TextViewEdits" />

    <TextView
        android:id="@+id/textAttack"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="24dp"
        android:text="@string/attack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDefense"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textDefense"
        android:layout_width="76dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/defense"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtName"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/trainDefense"
        android:layout_width="173dp"
        android:layout_height="47dp"
        android:layout_marginEnd="12dp"
        android:text="@string/train_defense"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/trainAttack"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:text="@string/train_attack"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>